--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="hello-container">
   <h1>🚀 Hello PagerDuty, from the develop branch! 🚀</h1>
-  <p>This Angular app was built with ⚙️ by Kevin Ugalde</p>
+  <p>This Angular app was built by Kevin Ugalde ⚙️</p>
   <p>Deployed via CI/CD using Docker, Terraform & GitHub Actions</p>
 </div>
